# Bottle_Cap_Map

./: .editorconfig  README.md  conda.yaml  pyproject.toml  pyrightconfig.json  requirements.txt
.github/workflows/: ci.yml
germany_beer_map/: __init__.py
germany_beer_map/data/mapping/: bottle_caps.csv  mapping.csv
germany_beer_map/src/: main.py
germany_beer_map/src/algorithms/: geocode.py  scaling.py  spatial_dist_min.py  tps_transform.py  two_dim_interp.py
germany_beer_map/src/image_processing/: circle_detection.py  image_preprocessor.py  map_outline_detection.py
germany_beer_map/src/user_interface/: draw_caps_on_map.py  draw_contours.py
germany_beer_map/src/utils/: csv_reader.py
germany_beer_map/tests/: test_algoritms.py  test_image_processing.py
src/: main.py
src/algorithms/: scaling.py
src/image_processing/: circle_detection.py  map_outline_detection.py
